tests/ui/attr_expected_value.stderr
error: fixcol-derive error: Expected identifier or literal.
 --> tests/ui/attr_expected_value.rs:5:32
  |
5 |     #[fixcol(width = 5, align =, default = "none")]
  |                                ^
